[package]
name = "tick"
version = "0.0.1"
authors = ["Sean McArthur <sean.monstar@gmail.com>"]
description = "An event loop using mio and eventual"
license = "MIT"
repository = "https://github.com/seanmonstar/tick"

[dependencies]
mio = "0.5"
slab = "0.1"
log = "0.3"

[dev-dependencies]
env_logger = "0.3"
